# mappy

./: Makefile  README.md  create_plugin_package.sh  setup.cfg
examples/: SimpleProcessing.ipynb
examples/python/: SimpleProcessing.py
input_data/: README.md  build_map.gpkg  qgis_project.qgz
input_data/contacts/: contacts.dbf  contacts.shp  contacts.shx
input_data/unit_id/: unit_id.dbf  unit_id.shp  unit_id.shx
mappy/: __init__.py  booleans.py  checks.py  conversions.py  dev_tests.py  features.py  geom_ops.py  mappy_logging.py  plotting.py  tjson.py
notebooks/: InsertStylesInGeopackage.ipynb  ProcessMap.ipynb  ProcessMapUsingGeopandas.ipynb  Test-intersection.ipynb  VerticesSnap.ipynb  add_points_to_edge.ipynb  mappy-back2.ipynb  mappy-back3.ipynb  mappy-fwd.ipynb  mappy_fwd.ipynb  mappy_fwd_single.ipynb  output-map-data.gpkg  slib.py  test_conv.ipynb
qgis_plugin/qgismappy/: Makefile  README.html  README.txt  __init__.py  dummy_info_widget.py  log_helper.py  metadata.txt  pb_tool.cfg  qgismappy.py  qgismappy_dockwidget.py  qgismappy_dockwidget_base.ui  qgismappy_dockwidget_dummy.ui  resources.py  resources.qrc  utils.py
qgis_plugin/qgismappy/help/source/: conf.py  index.rst
qgis_plugin/qgismappy/providers/: map_autostyle.py  map_construction.py  provider.py
qgis_plugin/qgismappy/test/: test_qgismappy_dockwidget.py  test_resources.py
