[metadata]
name = mappy
author = Luca Penasa
description = map-making tool
version = file: mappy/__version__.py
url = https://github.com/planmap-eu/mappy

keywords =
  geosciences
  map-making

classifiers =
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering

license_files =
  LICENSE

[options]
python_requires = >= 3.6
packages = mappy
zip_safe = False
install_requires =
    geopandas
    topojson

